--- a/Movie/movies.ipynb
+++ b/Movie/movies.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 1,
       "metadata": {
         "id": "Bu-FFSp8QiPr"
       },
@@ -20,7 +20,8 @@
         "from sklearn.svm import SVC, LinearSVC\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.tree import DecisionTreeClassifier"
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.preprocessing import LabelEncoder"
       ]
     },
     {
@@ -32,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 2,
       "metadata": {
         "id": "jnc76Q-PRs4l"
       },
@@ -43,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -179,7 +180,7 @@
               "4      Antara Mali  "
             ]
           },
-          "execution_count": 39,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -190,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -220,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -253,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -276,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -314,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -344,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 9,
       "metadata": {
         "id": "E685Uf7OSUpv"
       },
@@ -361,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 10,
       "metadata": {
         "id": "PFJpaBxLSUso"
       },
@@ -375,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 11,
       "metadata": {
         "id": "KvRgpry9S56F"
       },
@@ -386,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 12,
       "metadata": {
         "id": "1IXXLLXFTDgs"
       },
@@ -395,14 +396,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\Garima Varshney\\AppData\\Local\\Temp\\ipykernel_20224\\1652560933.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "C:\\Users\\Garima Varshney\\AppData\\Local\\Temp\\ipykernel_3124\\1652560933.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
             "\n",
             "\n",
             "  df[col].fillna(df[col].median(), inplace=True)\n",
-            "C:\\Users\\Garima Varshney\\AppData\\Local\\Temp\\ipykernel_20224\\1652560933.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "C:\\Users\\Garima Varshney\\AppData\\Local\\Temp\\ipykernel_3124\\1652560933.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -420,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 13,
       "metadata": {
         "id": "lgtMvfi5TZI0"
       },
@@ -429,7 +430,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\Garima Varshney\\AppData\\Local\\Temp\\ipykernel_20224\\2758321497.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "C:\\Users\\Garima Varshney\\AppData\\Local\\Temp\\ipykernel_3124\\2758321497.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -447,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -477,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -500,7 +501,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 52,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -511,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -526,7 +527,7 @@
               "(15509, 8)"
             ]
           },
-          "execution_count": 53,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -544,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 17,
       "metadata": {
         "id": "frFFab2dTa3I"
       },
@@ -555,13 +556,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 18,
       "metadata": {
         "id": "JZllE_jsTa5m"
       },
       "outputs": [],
       "source": [
-        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
         "df_encoded = pd.get_dummies(df.drop(columns=['Rating']))\n",
         "le = LabelEncoder()\n",
         "df_encoded['Rating'] = le.fit_transform(df['Rating'])"
@@ -569,14 +570,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 19,
       "metadata": {
         "id": "UTEMBczGTa8d"
       },
       "outputs": [],
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
         "X = df.drop(columns=['Rating'])\n",
         "y = df['Rating']"
       ]
@@ -590,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 20,
       "metadata": {
         "id": "TcxcFN3sTa-i"
       },
@@ -601,7 +601,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 21,
       "metadata": {
         "id": "EKzx-H7mTbBN"
       },
@@ -619,14 +619,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 22,
       "metadata": {
         "id": "DkT9GXr25aZw"
       },
       "outputs": [],
       "source": [
-        "import pandas as pd\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
         "all_ratings = pd.concat([y_train, y_test]).unique()\n",
         "le = LabelEncoder()\n",
         "le.fit(all_ratings)\n",
@@ -636,7 +634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -644,6 +642,59 @@
         "id": "4dcgKTJ7TbDp",
         "outputId": "b2c2a7a7-5363-4d21-fb3f-1b725d5f7801"
       },
+      "outputs": [],
+      "source": [
+        "from sklearn.preprocessing import  OneHotEncoder\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import accuracy_score"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "categorical_cols = X_train.select_dtypes(include=['object']).columns\n",
+        "numerical_cols = X_train.select_dtypes(include=['int64', 'float64']).columns\n",
+        "categorical_preprocessor = Pipeline(steps=[\n",
+        "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
+        "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+        "])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "numerical_preprocessor = Pipeline(steps=[\n",
+        "    ('imputer', SimpleImputer(strategy='mean')),\n",
+        "    ('scaler', StandardScaler())\n",
+        "])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "preprocessor = ColumnTransformer(\n",
+        "    transformers=[\n",
+        "        ('num', numerical_preprocessor, numerical_cols),\n",
+        "        ('cat', categorical_preprocessor, categorical_cols)\n",
+        "    ])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
       "outputs": [
         {
           "name": "stderr",
@@ -682,34 +733,12 @@
             "Model: Linear SVC, Score: 0.4839\n",
             "Model: Random Forest, Score: 0.5148\n",
             "Model: K-Nearest Neighbors, Score: 0.4958\n",
-            "Model: Decision Tree, Score: 0.5039\n"
+            "Model: Decision Tree, Score: 0.5045\n"
           ]
         }
       ],
       "source": [
-        "import pandas as pd\n",
-        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-        "from sklearn.compose import ColumnTransformer\n",
-        "from sklearn.pipeline import Pipeline\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "categorical_cols = X_train.select_dtypes(include=['object']).columns\n",
-        "numerical_cols = X_train.select_dtypes(include=['int64', 'float64']).columns\n",
-        "categorical_preprocessor = Pipeline(steps=[\n",
-        "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
-        "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
-        "])\n",
         "\n",
-        "numerical_preprocessor = Pipeline(steps=[\n",
-        "    ('imputer', SimpleImputer(strategy='mean')),\n",
-        "    ('scaler', StandardScaler())\n",
-        "])\n",
-        "preprocessor = ColumnTransformer(\n",
-        "    transformers=[\n",
-        "        ('num', numerical_preprocessor, numerical_cols),\n",
-        "        ('cat', categorical_preprocessor, categorical_cols)\n",
-        "    ])\n",
         "for rating, model in models.items():\n",
         "    pipeline = Pipeline(steps=[('preprocessor', preprocessor),('model', model)])\n",
         "    pipeline.fit(X_train, y_train_encoded)\n",
