--- a/Movie/movies.ipynb
+++ b/Movie/movies.ipynb
@@ -1,11 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Libraries"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "Bu-FFSp8QiPr"
-      },
+      "execution_count": 88,
+      "metadata": {},
       "outputs": [],
       "source": [
         "import pandas as pd\n",
@@ -33,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 89,
       "metadata": {
         "id": "jnc76Q-PRs4l"
       },
@@ -44,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 90,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -180,18 +185,18 @@
               "4      Antara Mali  "
             ]
           },
-          "execution_count": 3,
+          "execution_count": 90,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df.head()\n"
+        "df.head()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 91,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -221,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 92,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -254,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 93,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -277,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 94,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -315,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 95,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -345,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 96,
       "metadata": {
         "id": "E685Uf7OSUpv"
       },
@@ -362,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 97,
       "metadata": {
         "id": "PFJpaBxLSUso"
       },
@@ -376,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 98,
       "metadata": {
         "id": "KvRgpry9S56F"
       },
@@ -387,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 99,
       "metadata": {
         "id": "1IXXLLXFTDgs"
       },
@@ -421,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 100,
       "metadata": {
         "id": "lgtMvfi5TZI0"
       },
@@ -448,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 101,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -478,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -501,7 +506,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 102,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -512,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 103,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -527,7 +532,7 @@
               "(15509, 8)"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 103,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -545,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 104,
       "metadata": {
         "id": "frFFab2dTa3I"
       },
@@ -556,13 +561,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 105,
       "metadata": {
         "id": "JZllE_jsTa5m"
       },
       "outputs": [],
       "source": [
-        "\n",
         "df_encoded = pd.get_dummies(df.drop(columns=['Rating']))\n",
         "le = LabelEncoder()\n",
         "df_encoded['Rating'] = le.fit_transform(df['Rating'])"
@@ -570,13 +574,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 106,
       "metadata": {
         "id": "UTEMBczGTa8d"
       },
       "outputs": [],
       "source": [
-        "\n",
         "X = df.drop(columns=['Rating'])\n",
         "y = df['Rating']"
       ]
@@ -590,7 +593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 107,
       "metadata": {
         "id": "TcxcFN3sTa-i"
       },
@@ -601,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 108,
       "metadata": {
         "id": "EKzx-H7mTbBN"
       },
@@ -619,7 +622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 109,
       "metadata": {
         "id": "DkT9GXr25aZw"
       },
@@ -634,7 +637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 110,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -654,7 +657,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 111,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -668,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 112,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -680,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 113,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -693,7 +696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 114,
       "metadata": {},
       "outputs": [
         {
@@ -731,9 +734,9 @@
           "output_type": "stream",
           "text": [
             "Model: Linear SVC, Score: 0.4839\n",
-            "Model: Random Forest, Score: 0.5148\n",
+            "Model: Random Forest, Score: 0.5116\n",
             "Model: K-Nearest Neighbors, Score: 0.4958\n",
-            "Model: Decision Tree, Score: 0.5045\n"
+            "Model: Decision Tree, Score: 0.5090\n"
           ]
         }
       ],
@@ -751,8 +754,22 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "here we see the accuracy is very low so we have to increase the accuracy"
+        "here we see the accuracy is very low so we have to increase the accuracy for this i have to do hyperparameter tuning"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
